Minor changes to the html template

--- a/output.html
+++ b/output.html
@@ -1,11 +1,9 @@
 <HTML>
-<style>
-div {
-  padding-right: 3px;
-  padding-left: 3px;
-}
-</style>
+<head>
+<title>symcheck output</title>
+</head>
 
+<body>
 <!-- Made with: https://html-online.com/editor/ -->
 <p>This script is offered as-is, without warranty of any kind, following the <a href="https://opensource.org/licenses/MIT">MIT license</a>.</p>
 Please take a moment to review the settings below.</p>
@@ -13,14 +11,14 @@ Please take a moment to review the settings below.</p>
 You have used the RefSeq database file: ./NCBI_RefSeq_hg19_UCSC.tsv<br />You have used the HGNC database file: ./HGNC_results.tsv<br />You have provided a list of 6 gene symbols as a file: ./example_genes.txt</p>
 <p><strong>OPTIONS</strong><br />
 You want a list of all ambiguous gene names (-a).<br />You have chosen to flag mitochondrial genes  (-m).<br />You have chosen to flag genes from non-standard chromosomes (-w).<br />Finally, you want info about every gene in your list (-e).</p>
-<p><strong>SUMMARY<br /></strong>
-Of the 6 unique genes you provided:<br />
+<p><span style="text-decoration: underline;"><strong>SUMMARY</strong></span></p>
+<p>Of the 6 unique genes you provided:<br />
 4 were found in the RefSeq database (0 as mitochondrial) (0 in non-standard chroms).<br />
 <b>2 were missing from RefSeq</b>, of which 1 were mentioned as aliases of other genes.<br />
 Also, of the 2 genes missing from RefSeq, 1 were also missing in HGNC, while 1 were present either legitimately or as a withdrawn entry  (1 as mitochondrial) (1 in non-standard chroms).<br />
 Overall, 3 gene symbols were also aliases of other genes.<br />
 Overall, 1 genes were placed in non-standard chromosomes.</p>
-<p><strong>RESULTS<br /></strong>
+<p><span style="text-decoration: underline;"><strong>RESULTS</strong></span></p>
 <p>This is a review of all the symbols that were <strong>absent in the RefSeq database.</strong> Filtering by these names will likely not find anything.</p>
 <p><table border="1">
 <tbody>
@@ -40,11 +38,11 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, MTCO1, COI<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PGHS-1, PTGHS<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PTGHS, PGHS-1<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, COI, MTCO1<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>2</div></td>
-<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX2, CO2, MTCO2<br /></p></span></div></div></td>
+<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MTCO2, COX2, CO2<br /></p></span></div></div></td>
 <td><div>absent</div></td>
 <td><div>mitochondrially encoded cytochrome c oxidase II</div></td>
 <td><div>protein-coding gene</div></td>
@@ -81,7 +79,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MAL, MKL1, MRTF-A, MKL, BSAC, KIAA1438<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MRTF-A, BSAC, MAL, MKL, MKL1, KIAA1438<br /></p></span></div></div></td>
 </tr>
 </tbody>
 </table>
@@ -99,7 +97,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>The symbol is also an alias of:</div></td>
 <tr>
 <td><div>1</div></td>
-<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX2, CO2, MTCO2<br /></p></span></div></div></td>
+<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MTCO2, COX2, CO2<br /></p></span></div></div></td>
 <td><div>absent</div></td>
 <td><div>mitochondrially encoded cytochrome c oxidase II</div></td>
 <td><div>protein-coding gene</div></td>
@@ -122,7 +120,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>The symbol is also an alias of:</div></td>
 <tr>
 <td><div>1</div></td>
-<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX2, CO2, MTCO2<br /></p></span></div></div></td>
+<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MTCO2, COX2, CO2<br /></p></span></div></div></td>
 <td><div>absent</div></td>
 <td><div>mitochondrially encoded cytochrome c oxidase II</div></td>
 <td><div>protein-coding gene</div></td>
@@ -150,7 +148,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, MTCO1, COI<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PGHS-1, PTGHS<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PTGHS, PGHS-1<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, COI, MTCO1<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>2</div></td>
@@ -168,11 +166,11 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MAL, MKL1, MRTF-A, MKL, BSAC, KIAA1438<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MRTF-A, BSAC, MAL, MKL, MKL1, KIAA1438<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>4</div></td>
-<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX2, CO2, MTCO2<br /></p></span></div></div></td>
+<td><div><div class="rtooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO2" target="_blank">MT-CO2</a><span class="tooltiptext"><p>Gene symbol: MT-CO2<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase II<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MTCO2, COX2, CO2<br /></p></span></div></div></td>
 <td><div>absent</div></td>
 <td><div>mitochondrially encoded cytochrome c oxidase II</div></td>
 <td><div>protein-coding gene</div></td>
@@ -203,6 +201,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 
 <!-- From: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_tooltip -->
 <!-- With escaped {} -->
+
 <style>
 .ltooltip {
   position: relative;
@@ -280,7 +279,14 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 .rtooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
-}
-</style>
 
+}
+
+div {
+  padding-right: 3px;
+  padding-left: 3px;
+}
+
+</style>
+<body>
 </HTML>
