Added support for comment lines in gene file.

--- a/output.html
+++ b/output.html
@@ -8,7 +8,7 @@
 <p>This script is offered as-is, without warranty of any kind, following the <a href="https://opensource.org/licenses/MIT">MIT license</a>.</p>
 Please take a moment to review the settings below.</p>
 <p><strong>INPUT</strong><br />
-You have used the RefSeq database file: ./NCBI_RefSeq_hg19_UCSC.tsv<br />You have used the HGNC database file: ./HGNC_results.tsv<br />You have provided a list of 6 gene symbols as a file: ./example_genes.txt</p>
+You have used the RefSeq database file: ./NCBI_RefSeq_hg19_UCSC.tsv<br />You have used the HGNC database file: ./HGNC_results.tsv<br />You have provided a list of 6 gene symbols as a string.</p>
 <p><strong>OPTIONS</strong><br />
 You want a list of all ambiguous gene names (-a).<br />You have chosen to flag mitochondrial genes  (-m).<br />You have chosen to flag genes from non-standard chromosomes (-w).<br />Finally, you want info about every gene in your list (-e).</p>
 <p><span style="text-decoration: underline;"><strong>SUMMARY</strong></span></p>
@@ -38,7 +38,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PTGHS, PGHS-1<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, COI, MTCO1<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, COI, MTCO1<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PTGHS, PGHS-1<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>2</div></td>
@@ -70,7 +70,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>DNA ligase 1</div></td>
 <td><div>protein-coding gene</div></td>
 <td><div>19q13.33</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=LRIG1" target="_blank">LRIG1</a><span class="tooltiptext"><p>Gene symbol: LRIG1<br />Chromosome: chr3<br />RefSeq data: Yes<br />Location: chr3:66429220-66550845<br />HGNC data: Yes<br />Cytoband: 3p14.1<br />Status: Approved<br />Name: leucine rich repeats and immunoglobulin like domains 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: LIG1, DKFZP586O1624, LIG-1<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=LRIG1" target="_blank">LRIG1</a><span class="tooltiptext"><p>Gene symbol: LRIG1<br />Chromosome: chr3<br />RefSeq data: Yes<br />Location: chr3:66429220-66550845<br />HGNC data: Yes<br />Cytoband: 3p14.1<br />Status: Approved<br />Name: leucine rich repeats and immunoglobulin like domains 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: LIG-1, LIG1, DKFZP586O1624<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>2</div></td>
@@ -79,7 +79,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MRTF-A, BSAC, MAL, MKL, MKL1, KIAA1438<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MKL1, MKL, KIAA1438, BSAC, MAL, MRTF-A<br /></p></span></div></div></td>
 </tr>
 </tbody>
 </table>
@@ -148,7 +148,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PTGHS, PGHS-1<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, COI, MTCO1<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MT-CO1" target="_blank">MT-CO1</a><span class="tooltiptext"><p>Gene symbol: MT-CO1<br />Chromosome: chrmitochondria<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: mitochondria<br />Status: Approved<br />Name: mitochondrially encoded cytochrome c oxidase I<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, COI, MTCO1<br /></p></span></div>, <div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=PTGS1" target="_blank">PTGS1</a><span class="tooltiptext"><p>Gene symbol: PTGS1<br />Chromosome: chr9<br />RefSeq data: Yes<br />Location: chr9:125132808-125157982<br />HGNC data: Yes<br />Cytoband: 9q33.2<br />Status: Approved<br />Name: prostaglandin-endoperoxide synthase 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: COX1, PTGHS, PGHS-1<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>2</div></td>
@@ -157,7 +157,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>DNA ligase 1</div></td>
 <td><div>protein-coding gene</div></td>
 <td><div>19q13.33</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=LRIG1" target="_blank">LRIG1</a><span class="tooltiptext"><p>Gene symbol: LRIG1<br />Chromosome: chr3<br />RefSeq data: Yes<br />Location: chr3:66429220-66550845<br />HGNC data: Yes<br />Cytoband: 3p14.1<br />Status: Approved<br />Name: leucine rich repeats and immunoglobulin like domains 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: LIG1, DKFZP586O1624, LIG-1<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=LRIG1" target="_blank">LRIG1</a><span class="tooltiptext"><p>Gene symbol: LRIG1<br />Chromosome: chr3<br />RefSeq data: Yes<br />Location: chr3:66429220-66550845<br />HGNC data: Yes<br />Cytoband: 3p14.1<br />Status: Approved<br />Name: leucine rich repeats and immunoglobulin like domains 1<br />Locus group: protein-coding gene<br />Aliases of this specific gene: LIG-1, LIG1, DKFZP586O1624<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>3</div></td>
@@ -166,7 +166,7 @@ Overall, 1 genes were placed in non-standard chromosomes.</p>
 <td><div>(Missing)</div></td>
 <td><div>-</div></td>
 <td><div>-</div></td>
-<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MRTF-A, BSAC, MAL, MKL, MKL1, KIAA1438<br /></p></span></div></div></td>
+<td><div><div class="ltooltip"><a href="https://ghr.nlm.nih.gov/search?query=MRTFA" target="_blank">MRTFA</a><span class="tooltiptext"><p>Gene symbol: MRTFA<br />Chromosome: chr22<br />RefSeq data: No<br />HGNC data: Yes<br />Cytoband: 22q13.1-q13.2<br />Status: Approved<br />Name: myocardin related transcription factor A<br />Locus group: protein-coding gene<br />Aliases of this specific gene: MKL1, MKL, KIAA1438, BSAC, MAL, MRTF-A<br /></p></span></div></div></td>
 </tr>
 <tr>
 <td><div>4</div></td>
